<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mmstreaming</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Messenger">Messenger</string>
    <string name="Viber">Viber</string>
    <string name="Facebook">Facebook</string>
    <string name="Whatsapp">Whatsapp</string>
    <string name="Gmail">Gmail</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_main_activity2">mainActivity2</string>
    <string name="imageicon"></string>
    <string name="videotitle">videotitle</string>
    <string name="appdescription1">A Multimedia Streaming Application</string>
    <string name="appdescription">All Rights Reserved</string>
    <string name="videodescription">Videodescription......
    ...................................
    ..................</string>
    <string name="likeicon"></string>
    <string name="comment">Comment</string>

</resources>
